AC_INIT(src)
AC_CONFIG_AUX_DIR(src/makefiles/config)
AC_CACHE_VAL(ac_cv_prog_make_set, [AC_PROG_MAKE_SET])

AC_CONFIG_HEADER(generated/jrd/autoconfig.h:src/makefiles/config/config.h.in)

AC_CANONICAL_SYSTEM

AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_YACC

AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(sys/types.h)
AC_CHECK_HEADERS(sys/stat.h)
AC_CHECK_HEADERS(sys/uio.h)
AC_CHECK_HEADERS(sys/wait.h)
AC_CHECK_HEADERS(varargs.h)
AC_CHECK_HEADERS(stdarg.h)
AC_CHECK_HEADERS(ctype.h)
AC_CHECK_HEADERS(time.h)
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(string.h)

AC_C_BIGENDIAN

case "$target_cpu" in
powerpc) AC_DEFINE(PowerPC) ;;
esac

case "$target" in
*-*-darwin*) MAKEFILE_PREFIX=prefix.darwin ; PLATFORM=DARWIN ; AC_DEFINE(DARWIN);;
*-*-freebsd*) MAKEFILE_PREFIX=prefix.freebsd ; PLATFORM=FREEBSD ; AC_DEFINE(FREEBSD);;
*-*-linux*) MAKEFILE_PREFIX=prefix.linux ; PLATFORM=LINUX ; AC_DEFINE(linux) ;;
*-*-netbsd*) MAKEFILE_PREFIX=prefix.netbsd ; PLATFORM=NETBSD ; AC_DEFINE(NETBSD) ;;
*-apollo-*) MAKEFILE_PREFIX=prefix.apollo ; PLATFORM=apollo ; AC_DEFINE(apollo) ;;
*-*-hpux*) MAKEFILE_PREFIX=prefix.hpux ; PLATFORM=hpux ; AC_DEFINE(hpux) ;;
esac

AC_SUBST(PLATFORM)

ln -fs ../src/makefiles/${MAKEFILE_PREFIX} generated/.prefix.platform

AC_OUTPUT_COMMANDS([ln -sf . generated/objs], [rm -f generated/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../src generated/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/alice/objs], [rm -f generated/alice/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/alice/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/burp/objs], [rm -f generated/burp/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/burp/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/csv/objs], [rm -f generated/csv/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/csv/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/dbs/objs], [rm -f generated/dbs/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/dbs/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/dsql/objs], [rm -f generated/dsql/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/dsql/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/dudley/objs], [rm -f generated/dudley/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/dudley/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/extlib/objs], [rm -f generated/extlib/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/extlib/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/gpre/objs], [rm -f generated/gpre/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/gpre/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/intl/objs], [rm -f generated/intl/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/intl/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/isql/objs], [rm -f generated/isql/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/isql/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/journal/objs], [rm -f generated/journal/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/journal/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/jrd/objs], [rm -f generated/jrd/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/jrd/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/lock/objs], [rm -f generated/lock/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/lock/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/msgs/objs], [rm -f generated/msgs/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/msgs/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/pipe/objs], [rm -f generated/pipe/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/pipe/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/pyxis/objs], [rm -f generated/pyxis/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/pyxis/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/qli/objs], [rm -f generated/qli/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/qli/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/remote/objs], [rm -f generated/remote/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/remote/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/utilities/objs], [rm -f generated/utilities/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/utilities/source])
AC_OUTPUT_COMMANDS([ln -sf .. generated/wal/objs], [rm -f generated/wal/objs] )
AC_OUTPUT_COMMANDS([ln -sf ../../src generated/wal/source])

AC_OUTPUT( \
generated/alice/Makefile:generated/.prefix.platform:src/makefiles/sfx.alice \
generated/burp/Makefile:generated/.prefix.platform:src/makefiles/sfx.burp \
generated/csv/Makefile:generated/.prefix.platform:src/makefiles/sfx.csv \
generated/dbs/Makefile:generated/.prefix.platform:src/makefiles/sfx.dbs \
generated/dsql/Makefile:generated/.prefix.platform:src/makefiles/sfx.dsql \
generated/dudley/Makefile:generated/.prefix.platform:src/makefiles/sfx.dudley \
generated/example5/Makefile:generated/.prefix.platform:src/makefiles/sfx.example5 \
generated/extlib/Makefile:generated/.prefix.platform:src/makefiles/sfx.extlib \
generated/gpre/Makefile:generated/.prefix.platform:src/makefiles/sfx.gpre \
generated/intl/Makefile:generated/.prefix.platform:src/makefiles/sfx.intl \
generated/isql/Makefile:generated/.prefix.platform:src/makefiles/sfx.isql \
generated/journal/Makefile:generated/.prefix.platform:src/makefiles/sfx.journal \
generated/jrd/Makefile:generated/.prefix.platform:src/makefiles/sfx.jrd \
generated/lock/Makefile:generated/.prefix.platform:src/makefiles/sfx.lock \
generated/msgs/Makefile:generated/.prefix.platform:src/makefiles/sfx.msgs \
generated/pipe/Makefile:generated/.prefix.platform:src/makefiles/sfx.pipe \
generated/pyxis/Makefile:generated/.prefix.platform:src/makefiles/sfx.pyxis \
generated/qli/Makefile:generated/.prefix.platform:src/makefiles/sfx.qli \
generated/remote/Makefile:generated/.prefix.platform:src/makefiles/sfx.remote \
generated/utilities/Makefile:generated/.prefix.platform:src/makefiles/sfx.utilities \
generated/wal/Makefile:generated/.prefix.platform:src/makefiles/sfx.wal \
generated/Makefile:generated/.prefix.platform:src/makefiles/sfx.firebird \
Makefile:src/makefiles/config/Makefile.in \
)
